update, wallet UI
Builing of wallet UI Started

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,5 +111,10 @@
 
     <string name="about">About</string>
 
+    <string name="wallet">Wallet</string>
 
+    <string name="exchange">Exchange</string>
+    <string name="w">w</string>
+    <string name="e">e</string>
+    <string name="current_balance">Current Balance</string>
 </resources>
