--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,8 @@
     <string name="e">e</string>
     <string name="current_balance">Current Balance</string>
 
+    <string name="auth_not_found">Authentication not found</string>
+
     <string name="network_not_available">Network or internet connection cannot be detected,
         Please fix the issue and try again</string>
 </resources>
