Fuel Http -> OKHttp3
Switching from Fuel Http to OkHttp3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,6 @@
     <string name="updating">Updating..</string>
 
     <string name="more">More</string>
+
+    <string name="server_request_failed">Server request failed, Try again later</string>
 </resources>
