--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -141,4 +141,8 @@
     <string name="no">No</string>
     <string name="http_error">HTTP Request Error</string>
     <string name="server_connection_failed">Server Connection Failed</string>
+    <string name="deposit_asset">Deposit Asset</string>
+    <string name="deposit">Deposit</string>
+    <string name="receive_space_asset">Receive %1$s</string>
+    <string name="no_assets_available">No Assets available, contact support if problem persists</string>
 </resources>
