Receive Crypto Asset Update
Address retrieval, QR code update

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -145,4 +145,5 @@
     <string name="deposit">Deposit</string>
     <string name="receive_space_asset">Receive %1$s</string>
     <string name="no_assets_available">No Assets available, contact support if problem persists</string>
+    <string name="unknown_asset">Unknown Asset %1$s</string>
 </resources>
