--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -146,4 +146,7 @@
     <string name="receive_space_asset">Receive %1$s</string>
     <string name="no_assets_available">No Assets available, contact support if problem persists</string>
     <string name="unknown_asset">Unknown Asset %1$s</string>
+    <string name="copy">Copy</string>
+    <string name="generate">Generate</string>
+    <string name="address_copied_to_clipboard">Address copied to clipboard</string>
 </resources>
