Fingerprint core class update
Difference in API 23 and API 28 for the fingerprint api implementation made it neccessary for a common class. This class will handle all the problems associated with it

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -180,4 +180,15 @@
     <string name="save">Save</string>
     <string name="pincode_lenght_error">Pin code field requires a 4 numeric charaters</string>
     <string name="pincodes_dont_match">Pin codes do not match</string>
+
+    <string name="enable_fingerprint_setting">
+         Your device\'s fingerprint hardware is not enabled,
+        you will be forwarded to settings to
+        enable it before you proceed.</string>
+    <string name="pincode_saved">Pincode saved successfully</string>
+    <string name="enter_pincode">Enter Pin Code</string>
+
+    <string name="_continue">Continue</string>
+    <string name="fingerprint_init_failed">Fingerprint initialization failed</string>
+    <string name="fingerprint_auth_failed">Fingerprint authentication failed</string>
 </resources>
