Kick out an strange intrusion
Kick out for 15minutes after 5 fingerprint attempts and 5 pin code attempt ...

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -201,4 +201,7 @@
     <string name="pin_code">Pin Code</string>
     <string name="idle_fingerprint_ui_closed">Idle fingerprint window closed to save resources</string>
     <string name="fingerprint_records_not_found">Your fingerprint data was not found on device, disabling fingerprint support</string>
+    <string name="retry_msg">You have %1$s attempts</string>
+    <string name="invalid_pincode">Invalid Pin code, %1$s chance to try</string>
+    <string name="in_app_auth_failed">InApp Authentication Failed, App locked for %1$s</string>
 </resources>
