--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,4 +206,7 @@
     <string name="pin_code">Pin Code</string>
     <string name="idle_fingerprint_ui_closed">Idle fingerprint window closed to save resources</string>
     <string name="fingerprint_records_not_found">Your fingerprint data was not found on device, disabling fingerprint support</string>
+    <string name="retry_msg">You have %1$s attempt</string>
+    <string name="invalid_pincode">Invalid Pin code, you have %1$s attempt</string>
+    <string name="in_app_auth_failed">InApp Authentication Failed, You will be locked out for %1$s</string>
 </resources>
