--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,5 +208,7 @@
     <string name="fingerprint_records_not_found">Your fingerprint data was not found on device, disabling fingerprint support</string>
     <string name="retry_msg">You have %1$s attempt</string>
     <string name="invalid_pincode">Invalid Pin code, you have %1$s attempt</string>
-    <string name="in_app_auth_failed">InApp Authentication Failed, You will be locked out for %1$s</string>
+    <string name="in_app_auth_failed">
+        InApp Authentication Failed, You will be locked out for %1$s minutes
+    </string>
 </resources>
